@@ -3,6 +3,9 @@ qtwebkit (2.2.1-7) UNRELEASED; urgency=low
   [ Nobuhiro Iwamatsu ]
   * Fix build on Renesas sh4, using -gstabs instead of -g. (Closes: #694773)
 
+  [ Pino Toscano ]
+  * Fix build on m68k, using -gstabs instead of -g. (Closes: #717685)
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Oct 2013 19:02:49 +0200
 
 qtwebkit (2.2.1-6) unstable; urgency=low
